--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,9 @@
 /** INDEX PAGE  **/
 
 body {
-    background-color: #FFA41B;
-    color: #000839;
-    font-family: 'Ubuntu', sans-serif;
+    background-color: #e9e9e9;
+    color: #494949;
+    font-family: 'Esteban';
 
 }
 
@@ -13,12 +13,13 @@ body {
 .navbar {
     padding: 2rem 6rem 2rem 6rem;
     font-size: 1.5rem;
+    background-color:#ffd000;
 }
 
 
 .navbar-brand {
-    font-size: 2rem;
-    font-family: 'Pacifico', cursive;
+    font-size: 5rem;
+    font-family: 'Rouge Script';
 }
 
 
@@ -27,6 +28,7 @@ body {
 
 
 /** intro section **/
+
 
 #intro-section {
     padding: 4rem;
@@ -37,30 +39,50 @@ body {
     padding: 4rem 8rem 7rem 8rem;
 }
 
+
 .intro-para {
     padding-right: 15rem;
 }
 
 
 .intro-para h1 {
-    font-family: 'Pacifico', cursive;
-    font-size: 6rem;
+    font-family: 'Esteban', cursive;
+    font-size: 4rem;
 }
 
 
 .intro-para p {
-    font-size: 2rem;
+    font-size: 1.75rem;
 }
-
+.tagline{
+    color: #ffd000;
+}
 
 /** intro section end **/
 
-
+button{
+    background-color: #ffd000;
+}
 
 /** section-2  **/
 
+#feature-section{
+    padding: 4em;
+}
+#features-section .row{
+    padding: 4rem 8rem 7rem 8rem;
 
+}
+.features-para{
+    padding-top: 3em;
+    padding-left: 2em;
+    font-size: 1.75em;
+    /*background-color: #ffd000;*/
+}
 
+.scooter{
+    padding: 2em 2em;
+}
 
 
 
