--- a/css/navbar-footer.css
+++ b/css/navbar-footer.css
@@ -1,25 +1,30 @@
 /** NAVBAR **/
 
 .navbar {
-    padding: 2rem 6rem 1rem 6rem;
-    font-size: 1.75rem;
-    /* background-color: #2a324b;*/
+    padding: 1em 4em 1em 6em;
     background-color: #fff3f3;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
 
 
 .navbar-brand {
-    font-size: 5rem;
+    font-size: 6rem;
     font-family: 'Rouge Script';
 }
-.navbar-default .navbar-nav a{
+.nav-item{
+    font-size: 24px;
+    padding: 0.7em;
+}
+a.navbar-brand{
     color:#ff1654;
 }
-.navbar-default a{
-    /*color: #ffefd3;*/
+.navbar-nav a{
     color: #ff1654;
+    transition: 0.3s;
 }
+    .navbar-nav a:hover{
+        color: #7d4f50;
+    }
 
 /** NAVBAR-END **/
 
@@ -39,7 +44,5 @@
 .fab {
     color: #ff1654;
 }
-.fas{
-    color: #fff07c;
-}
+
 /** footer end **/
