--- a/css/styles.css
+++ b/css/styles.css
@@ -5,25 +5,44 @@
     #fff3f3 --> header/footer
     #ff1654 --> pink-ish
     #fff07c --> yellow-tagline
+
+    I might change the colour palette >_< 
+                                            ~Anisha 
     */
+:root{
+    --bgMain :  #7d4f50;
+    --bgMain-dark: #6e4546;
+    --sub-bg: #fff3f3;
+    
+    --subText-pink: #ff1654  ;
+    --subText-yellow: #fff07c;
+
+}
 
 /** INDEX PAGE  **/
 *{
     max-width: 100%;
+    margin: 0;
+    padding: 0;
 }
 
 body {
-    background-color: #7d4f50;
+    background-color: var(--bgMain);
     color: #ffffff;
     font-family: 'Esteban';
 
 }
+label{
+    font-size: 24px;
+}
 #body-info{
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
+
+/* MODAL FORM */
 .modal-content{
-    background-color: #fff3f3;
-    color: #7d4f50;
+    background-color: var(--sub-bg);
+    color: var(--bgMain-dark);
 }
 .close{
     color: #aaaaaa;
@@ -39,14 +58,57 @@ body {
 
 .modal-btn{
     font-size: 1.3em;
-    padding: 0.5em 2em;
-    margin-right: 2em;
+    padding: 0.3em 3em;
 }
-.modal-footer{
-    margin-right: 10em;
+form{
+    padding: 3em;
 }
+#form{
+    padding: 0.2em 2em 1em 2em;
+}
+.form-check{
+    padding-left: 3em;
+     margin-top: 0.7em;
+}
+.form-check label{
+    font-size: 16px;
+}
+.form-group{
+    padding: 0.75em;
+    margin: 0;
+    position: relative;
+}
+    .form-group.success input{
+        border:2px solid #55a630;
+    }
+    .form-group.error input{
+        border: 2px solid #d90429;
+    }
+.form-group i {
+    position: absolute;
+    top: 66px;
+    right: 20px;
+    visibility: hidden;
+}
+    .form-group.success i.fa-check-circle{
+        visibility: visible;
+        color: #55a630;
+    }
+    .form-group.error i.fa-exclamation-circle{
+        visibility: visible;
+        color: #d90429;
+    }
 
-
+.form-group small{
+    visibility: hidden;
+    position: absolute;
+    bottom: -10px;
+    left: 15px;
+}
+.form-group.error small{
+    visibility: visible;
+    color: #d90429;
+}
 
 /** intro section **/
 
@@ -57,7 +119,7 @@ body {
 
 
 #intro-section .row {
-    padding: 4rem 8rem 7rem 8rem;
+    padding: 3rem 8rem 7rem 8rem;
 }
 
 
@@ -75,18 +137,17 @@ body {
 
 
 .intro-para p {
-    font-size: 1.75rem;
+    padding-bottom: 2em;
+    font-size: 24px;
 }
 .intro-para .tagline{
     font-family: 'Rouge Script';
     /*color: #e4c1f9;*/
-    color: #fff07c;
+    color: var(--subText-yellow);
    
 }
 
-form{
-    padding: 3em;
-}
+
 /** intro section end **/
 
 
@@ -116,7 +177,7 @@ form{
 }
 
 .features-para .tagline{
-    color: #fff07c;
+    color:var(--subText-yellow);
     font-family: 'Rouge Script';
     font-size: 2em;
     padding-bottom:0.5em;
@@ -126,7 +187,9 @@ form{
 .scooter{
     padding: 2em 2em;
 }
-
+#features-section i.fa-handshake, #features-section i.fa-cheese, #features-section i.fa-sign-in-alt{
+    color: var(--subText-yellow);
+}
 
 
 /** section-2 end **/
@@ -211,49 +274,161 @@ form{
     font-size: x-large;
 }
 .review{
-    color: #fff07c;
+    color: var(--subText-yellow);
 }
 
 /** section-3 end **/
-
-
 /** INDEX PAGE END **/
 
+/*-----------------------------------------------------------------------------------*/
 
 /** STORES PAGE **/
 
 /* CAROUSEL */
 #sales-carousel{
-    padding: 5em;
-    background-color: #6e4546;
+    padding:0;
+    
 }
-#sales-carousel .carousel-inner img{
-    padding: 3em;
+    .parallax{
+        background-image: url('../images/wallBg.jpg');
+        background-attachment: fixed;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+    }
+/* #sales-carousel .carousel-inner{
+    background-color: var(--bgMain-dark);
+} */
+#sales-carousel .carousel-item{
+    width: 100%;
+    height: 500px;
+    
 }
-
+    #sales-carousel .carousel-item img{
+        border: 4px solid #6e4546;
+        border-radius: 10px;
+        max-height:100%;
+        margin-top: 3em;
+        margin-left: 7em;
+        overflow:hidden;
+   }
 
 
 /*ITEMS CARDS*/
 #items-card{
     background-image: url('../images/flower.jpg');
+    padding: 4em 0em 2em 0em;
 }
-.item-wrapper{
+
+/* Item Header */
+.item-card-header{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    padding: 4em 9em 4em 9em
+    justify-content: center;
 }
-.card{
-   width: 18rem;
-   justify-content: center;
+    .item-card-header .heading{
+        text-transform: uppercase;
+        font-size: 28px;
+        padding: 1.2 em;
+    }
+    .item-card-header .line1{
+        background-color: var(--sub-bg);
+        border: 1px transparent;
+        border-radius: 4px;
 
-   margin: 2em;
-   margin-left: 5em;
+        width: 20em;
+        height: 0.3em;
+        margin: 2em 0em 2em 14em;
+
+    }
+    .item-card-header .line2{
+        background-color: var(--sub-bg);
+        border: 1px transparent;
+        border-radius: 4px;
+        width: 20em;
+        height: 0.3em;
+        margin: 2em 3em 2em 0em;
+    }
+
+/* Items Body */
+.item-wrapper{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    padding: 4em 10em 4em 9em;
 }
+/* Each card */
+.card{
+    width: 18rem;
+    justify-content: center;
+
+    margin: 1em;
+    margin-left: 2em;
+    box-shadow: 4px 4px 11px -6px rgba(0,0,0,0.46);
+    transition: 0.5s;
+}
+    .card:hover{
+        box-shadow: 1px 13px 11px 0px rgba(0,0,0,0.48);
+    }
 .card-img-top{
     height: 20em;
     width: 18em;
 }
 .card .card-body {
-    color: #7d4f50;
+    color: var(--bgMain);
     /* border: 2px solid #000;*/
 }
+.card-text {
+    font-weight: 600;
+}
+.card a.btn{
+    width: 100%;
+}
+
+/* Item Footer */
+.item-card-footer{
+    display: grid;
+    grid-template-columns: 15% 70% 15%;
+    margin: 0em 30em 0em 30em;
+}
+    .prev{
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
+    }
+    .next{
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+    }
+    .pages{
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+    }
+        .number{
+            padding: 0.5em 1.7em 0.5em 1.7em;
+            margin: 0.7em;
+            background-color: #ffffff;
+            color: var(--bgMain-dark);
+            font-size: 18px;
+            font-weight: 600;
+            border: 0px transparent;
+            border-radius: 50px;
+        }
+    .item-card-footer a.item-nav{
+        color: var(--subText-yellow);
+        transition: 0.3s;
+    }
+        .item-card-footer a.item-nav:hover{
+            color: #fff3f3;
+            
+        }
+    .item-card-footer .number a{
+        
+        color: var(--bgMain);
+        transition: 0.3s;
+    }
+        .item-card-footer .number a:hover{
+            color: var(--bgMain-dark);
+            text-decoration: none;
+        }
