--- a/css/styles.css
+++ b/css/styles.css
@@ -1,22 +1,22 @@
 /*
-    Palette
-    #7d4f50; --> main BG-colour
-    #6e4546 --> darker shade of BG
-    #fff3f3 --> header/footer
-    #ff1654 --> pink-ish
-    #fff07c --> yellow-tagline
+Palette
+#7d4f50 --> main BG-colour
+#6d4546 --> CURRENT main BG-colour  - doing this so that the image brown color blends in with the main BG color
+#6e4546 --> darker shade of BG
+#fff3f3 --> header/footer
+#ff1654 --> pink-ish
+#fff07c --> yellow-tagline
 
-    I might change the colour palette >_< 
-                                            ~Anisha 
-    */
+I might change the colour palette >_< 
+~Anisha 
+ */
 :root{
-    --bgMain :  #7d4f50;
+    --bgMain :  #6d4546;
     --bgMain-dark: #6e4546;
     --sub-bg: #fff3f3;
-    
+
     --subText-pink: #ff1654  ;
     --subText-yellow: #fff07c;
-
 }
 
 /** INDEX PAGE  **/
@@ -37,6 +37,7 @@ label{
 }
 #body-info{
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    margin:0 0.75rem 0.75rem 0;
 }
 
 /* MODAL FORM */
@@ -50,11 +51,11 @@ label{
     font-size: 28px;
     font-weight: bold;
 }
-    .close:hover, .close:focus {
-         color: #000;
-        text-decoration: none;
-        cursor: pointer;
-    }
+.close:hover, .close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+}
 
 .modal-btn{
     font-size: 1.3em;
@@ -68,7 +69,7 @@ form{
 }
 .form-check{
     padding-left: 3em;
-     margin-top: 0.7em;
+    margin-top: 0.7em;
 }
 .form-check label{
     font-size: 16px;
@@ -78,26 +79,26 @@ form{
     margin: 0;
     position: relative;
 }
-    .form-group.success input{
-        border:2px solid #55a630;
-    }
-    .form-group.error input{
-        border: 2px solid #d90429;
-    }
+.form-group.success input{
+    border:2px solid #55a630;
+}
+.form-group.error input{
+    border: 2px solid #d90429;
+}
 .form-group i {
     position: absolute;
     top: 66px;
     right: 20px;
     visibility: hidden;
 }
-    .form-group.success i.fa-check-circle{
-        visibility: visible;
-        color: #55a630;
-    }
-    .form-group.error i.fa-exclamation-circle{
-        visibility: visible;
-        color: #d90429;
-    }
+.form-group.success i.fa-check-circle{
+    visibility: visible;
+    color: #55a630;
+}
+.form-group.error i.fa-exclamation-circle{
+    visibility: visible;
+    color: #d90429;
+}
 
 .form-group small{
     visibility: hidden;
@@ -113,7 +114,7 @@ form{
 /** intro section **/
 
 #intro-section {
-    padding: 4rem;
+    padding: 5rem;
     background-image: url('../images/flower-bg.jpg');
 }
 
@@ -126,7 +127,7 @@ form{
 .intro-para {
     padding-right: 10rem;
     padding-top: 5rem;
-    
+
 }
 
 
@@ -137,14 +138,14 @@ form{
 
 
 .intro-para p {
-    padding-bottom: 2em;
+    padding-bottom: 2rem;
     font-size: 24px;
 }
 .intro-para .tagline{
     font-family: 'Rouge Script';
     /*color: #e4c1f9;*/
     color: var(--subText-yellow);
-   
+
 }
 
 
@@ -152,10 +153,6 @@ form{
 
 
 /** section-2  **/
-
-#feature-section{
-    padding: 4em;
-}
 
 
 #features-section .row{
@@ -165,27 +162,27 @@ form{
 
 .features-para{
     padding-top: 6rem;
-    padding-left: 5em;
-    font-size: 1.5em;
+    padding-left: 5rem;
+    font-size: 1.5rem;
 }
 
 .features-para ul{
-    padding-bottom: 1em;
+    padding-bottom: 1rem;
 }
 #features-section li{
-  padding: 0.75em;
+    padding: 0.75rem;
 }
 
 .features-para .tagline{
     color:var(--subText-yellow);
     font-family: 'Rouge Script';
-    font-size: 2em;
-    padding-bottom:0.5em;
+    font-size: 2rem;
+    padding-bottom:0.5rem;
 }
 
 
 .scooter{
-    padding: 2em 2em;
+    padding: 2rem 2rem;
 }
 #features-section i.fa-handshake, #features-section i.fa-cheese, #features-section i.fa-sign-in-alt{
     color: var(--subText-yellow);
@@ -197,7 +194,7 @@ form{
 
 /** adding float animations for svgs (experimental) **/
 .float {
-  -webkit-animation-name: Floating;
+    -webkit-animation-name: Floating;
     -webkit-animation-duration: 6s;
     -webkit-animation-iteration-count: infinite;
     -webkit-animation-timing-function: ease-in-out;
@@ -213,69 +210,28 @@ form{
 
 
 /** section-3  **/
+
 #section-3 {
+    padding-top: 4rem;
     background-image: url('../images/flower.jpg');
 }
 
 .carousel {
-    padding-bottom: 6rem;
-    /*background-color: #6e4546;*/
+    height: 80vh;
 }
 
-#carousel .carousel-item {
-  height: 70vh;
-  width: 100%;
-  min-height: 20px;
-  background: no-repeat center center scroll;
-  }
-
-#carousel .carousel-inner .carousel-item {
-  transition: -webkit-transform 2s ease;
-  transition: transform 2s ease;
-  transition: transform 2s ease, -webkit-transform 2s ease;
+.carousel-inner {
+    padding: 10%;
 }
 
-#carousel .carousel-item .caption {
-  background-color: rgba(0, 0, 0, 0);
-  color: white;
-  animation-duration: 1s;
-  animation-delay: 2s;
-}
-
-#carousel .container{
- width: 50 px;
- position: absolute;
-   left: 35%;
-}
-
-#carousel .caption h2 {
-  animation-duration: 1s;
-  animation-delay: 2s;
-}
-
-#carousel .caption p {
-  animation-duration: 1s;
-  animation-delay: 2.2s;
-}
-
-#carousel .caption a {
-  animation-duration: 1s;
-  animation-delay: 2.4s;
-}
-
-.caption {
-    text-align: center;
+.review {
     font-family: 'Rouge Script';
     font-size: 3rem;
-    
+    display: flex;
+    align-items: center;
+    padding: 0 10rem 0;
 }
-.user{
-    font-family: 'Esteban';
-    font-size: x-large;
-}
-.review{
-    color: var(--subText-yellow);
-}
+
 
 /** section-3 end **/
 /** INDEX PAGE END **/
@@ -287,31 +243,35 @@ form{
 /* CAROUSEL */
 #sales-carousel{
     padding:0;
-    
+
 }
-    .parallax{
-        background-image: url('../images/wallBg.jpg');
-        background-attachment: fixed;
-        background-position: center;
-        background-repeat: no-repeat;
-        background-size: cover;
-    }
+
+.parallax{
+    background-image: url('../images/wallBg.jpg');
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
 /* #sales-carousel .carousel-inner{
-    background-color: var(--bgMain-dark);
+background-color: var(--bgMain-dark);
 } */
+
 #sales-carousel .carousel-item{
     width: 100%;
     height: 500px;
-    
+
 }
-    #sales-carousel .carousel-item img{
-        border: 4px solid #6e4546;
-        border-radius: 10px;
-        max-height:100%;
-        margin-top: 3em;
-        margin-left: 7em;
-        overflow:hidden;
-   }
+
+#sales-carousel .carousel-item img{
+    border: 4px solid #6e4546;
+    border-radius: 10px;
+    max-height:100%;
+    margin-top: 3em;
+    margin-left: 7em;
+    overflow:hidden;
+}
 
 
 /*ITEMS CARDS*/
@@ -322,113 +282,216 @@ form{
 
 /* Item Header */
 .item-card-header{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
     justify-content: center;
+    padding: 0 2rem 0;
+    margin: 2rem 0 2rem;
 }
-    .item-card-header .heading{
-        text-transform: uppercase;
-        font-size: 28px;
-        padding: 1.2 em;
-    }
-    .item-card-header .line1{
-        background-color: var(--sub-bg);
-        border: 1px transparent;
-        border-radius: 4px;
 
-        width: 20em;
-        height: 0.3em;
-        margin: 2em 0em 2em 14em;
+.item-card-header .heading{
+    text-transform: uppercase;
+    font-size: 28px;
+}
 
-    }
-    .item-card-header .line2{
-        background-color: var(--sub-bg);
-        border: 1px transparent;
-        border-radius: 4px;
-        width: 20em;
-        height: 0.3em;
-        margin: 2em 3em 2em 0em;
-    }
+.item-card-header .line1{
+    background-color: var(--sub-bg);
+    border: 1px transparent;
+    border-radius: 4px;
+    height: 0.3rem;
+    margin: auto;
+}
+
+.item-card-header .line2{
+    background-color: var(--sub-bg);
+    border: 1px transparent;
+    border-radius: 4px;
+    height: 0.3rem;
+    margin: auto;
+}
 
 /* Items Body */
 .item-wrapper{
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    padding: 4em 10em 4em 9em;
+    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+    padding: 4rem 1rem 2rem 4rem;
+    grid-gap: 4rem;
 }
+
 /* Each card */
+
 .card{
     width: 18rem;
     justify-content: center;
-
     margin: 1em;
     margin-left: 2em;
     box-shadow: 4px 4px 11px -6px rgba(0,0,0,0.46);
     transition: 0.5s;
 }
-    .card:hover{
-        box-shadow: 1px 13px 11px 0px rgba(0,0,0,0.48);
-    }
+
+.card:hover{
+    box-shadow: 1px 13px 11px 0px rgba(0,0,0,0.48);
+}
+
 .card-img-top{
     height: 20em;
     width: 18em;
 }
+
 .card .card-body {
     color: var(--bgMain);
     /* border: 2px solid #000;*/
 }
+
 .card-text {
     font-weight: 600;
 }
+
 .card a.btn{
     width: 100%;
 }
 
+
 /* Item Footer */
 .item-card-footer{
-    display: grid;
-    grid-template-columns: 15% 70% 15%;
-    margin: 0em 30em 0em 30em;
+    margin: 0 auto 0;
 }
-    .prev{
-        display: flex;
-        justify-content: flex-end;
-        align-items: center;
+
+.prev{
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+
+.next{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.pages{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.number{
+    padding: 0.5em 1.7em 0.5em 1.7em;
+    margin: 0.7em;
+    background-color: #ffffff;
+    color: var(--bgMain-dark);
+    font-size: 18px;
+    font-weight: 600;
+    border: 0px transparent;
+    border-radius: 50px;
+} 
+
+.item-card-footer a.item-nav{
+    color: var(--subText-yellow);
+    transition: 0.3s;
+}
+
+.item-card-footer a.item-nav:hover{
+    color: #fff3f3;
+}
+
+.item-card-footer .number a{
+
+    color: var(--bgMain);
+    transition: 0.3s;
+}
+
+.item-card-footer .number a:hover{
+    color: var(--bgMain-dark);
+    text-decoration: none;
+}
+
+
+/** MEDIA QUERIES **/
+
+@media only screen and (max-width: 950px) {
+
+    #intro-section {
+        padding: 2rem;
     }
-    .next{
-        display: flex;
-        justify-content: flex-start;
-        align-items: center;
+
+    #intro-section .row {
+        padding: 3rem 0 5rem;
+        margin-top: auto;
+        margin-bottom: auto;
+        text-align: center;
     }
-    .pages{
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
+
+    .intro-para {
+        padding: 0;
+        padding-left: 1.5rem;
     }
-        .number{
-            padding: 0.5em 1.7em 0.5em 1.7em;
-            margin: 0.7em;
-            background-color: #ffffff;
-            color: var(--bgMain-dark);
-            font-size: 18px;
-            font-weight: 600;
-            border: 0px transparent;
-            border-radius: 50px;
-        }
-    .item-card-footer a.item-nav{
-        color: var(--subText-yellow);
-        transition: 0.3s;
+
+    .intro-para h1 {
+        font-size: 2rem;
     }
-        .item-card-footer a.item-nav:hover{
-            color: #fff3f3;
-            
-        }
-    .item-card-footer .number a{
-        
-        color: var(--bgMain);
-        transition: 0.3s;
+
+    .intro-para p {
+        font-size: 1rem;
+        padding-bottom: 0;
     }
-        .item-card-footer .number a:hover{
-            color: var(--bgMain-dark);
-            text-decoration: none;
-        }
+
+    #body-info {
+        margin-bottom: 0.5rem;
+        font-size: 0.75rem;
+        height: 2rem;
+        width: 5.75rem;
+    }
+
+    .intro-food {
+        padding: 4rem;
+    }
+
+    /* FEATURES SECTION */
+
+    #features-section .row {
+        padding: 2rem; 
+        margin: 0;
+    }
+
+    .features-para {
+        padding-top: 3rem;
+        padding-left: 2rem;
+        padding: 3rem 1rem 0;
+    }
+
+    #features-section li {
+        font-size: 1rem;
+    }
+
+    .scooter {
+        padding: 4rem;
+    }
+
+    /* SECTION 3 */
+    #section-3 {
+        padding: 0rem;
+    }
+
+    .review {
+        font-size: 1.5rem;
+        padding: 10rem 2rem 0;
+    }
+
+}
+
+
+@media only screen and (min-width: 950px) and (max-width: 1200px) {  /** for 950px above and less than 1300px **/
+
+    /* INDEX PAGE */
+    /* INTRO SECTION */
+    #intro-section .row {
+        margin: 0;
+        padding: 3rem 3rem 7rem;
+    }
+
+    #section-3 {
+        padding: 5rem 0 0 0;
+    }
+
+    /* INTRO SECTION END */
+
+}
