--- a/css/styles.css
+++ b/css/styles.css
@@ -40,7 +40,7 @@ label{
     margin:0 0.75rem 0.75rem 0;
 }
 
-/* MODAL FORM */
+/* INDEX MODAL FORM */
 .modal-content{
     background-color: var(--sub-bg);
     color: var(--bgMain-dark);
@@ -61,40 +61,50 @@ label{
     font-size: 1.3em;
     padding: 0.3em 3em;
 }
+
 form{
     padding: 3em;
 }
+
 #form{
     padding: 0.2em 2em 1em 2em;
 }
+
 .form-check{
     padding-left: 3em;
     margin-top: 0.7em;
 }
+
 .form-check label{
     font-size: 16px;
 }
+
 .form-group{
     padding: 0.75em;
     margin: 0;
     position: relative;
 }
+
 .form-group.success input{
     border:2px solid #55a630;
 }
+
 .form-group.error input{
     border: 2px solid #d90429;
 }
+
 .form-group i {
     position: absolute;
     top: 66px;
     right: 20px;
     visibility: hidden;
 }
+
 .form-group.success i.fa-check-circle{
     visibility: visible;
     color: #55a630;
 }
+
 .form-group.error i.fa-exclamation-circle{
     visibility: visible;
     color: #d90429;
@@ -106,6 +116,7 @@ form{
     bottom: -10px;
     left: 15px;
 }
+
 .form-group.error small{
     visibility: visible;
     color: #d90429;
@@ -127,7 +138,6 @@ form{
 .intro-para {
     padding-right: 10rem;
     padding-top: 5rem;
-
 }
 
 
@@ -136,16 +146,15 @@ form{
     font-size: 4rem;
 }
 
-
 .intro-para p {
     padding-bottom: 2rem;
     font-size: 24px;
 }
+
 .intro-para .tagline{
     font-family: 'Rouge Script';
     /*color: #e4c1f9;*/
     color: var(--subText-yellow);
-
 }
 
 
@@ -217,7 +226,7 @@ form{
 }
 
 .carousel {
-    height: 80vh;
+    height: 80%;
 }
 
 .carousel-inner {
@@ -243,7 +252,6 @@ form{
 /* CAROUSEL */
 #sales-carousel{
     padding:0;
-
 }
 
 .parallax{
@@ -268,11 +276,10 @@ background-color: var(--bgMain-dark);
     border: 4px solid #6e4546;
     border-radius: 10px;
     max-height:100%;
-    margin-top: 3em;
-    margin-left: 7em;
+    margin: auto;
+    margin-left: 2em;
     overflow:hidden;
 }
-
 
 /*ITEMS CARDS*/
 #items-card{
@@ -393,17 +400,50 @@ background-color: var(--bgMain-dark);
     color: #fff3f3;
 }
 
-.item-card-footer .number a{
-
-    color: var(--bgMain);
-    transition: 0.3s;
+/** ITEMS MODAL **/
+#items-modal {
+    display: none; /* Hidden by default */
+    align-items: center;
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    background-color: rgba(0,0,0,0.6); /* Black w/ opacity */
 }
 
-.item-card-footer .number a:hover{
+.items-modal-content {
+    background-color: var(--sub-bg);
     color: var(--bgMain-dark);
-    text-decoration: none;
+    margin: auto;
+    padding: 1rem;
+    width: 60%;
+    animation-name: animatetop;
+    animation-duration: 0.4s;
+    font-size: 1.5rem;
+    border: 0px transparent;
+    border-radius: 15px;
 }
 
+@keyframes animatetop {
+    from {top: -300px; opacity: 0}
+    to {top: 0; opacity: 1}
+}
+
+.items-modal-close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.items-modal-close:hover,
+.items-modal-close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
 
 /*-----------------------------------------------------------------------------------*/
 
@@ -429,6 +469,36 @@ background-color: var(--bgMain-dark);
 
 /** SELL PAGE END **/
 
+/*-----------------------------------------------------------------------------------*/
+
+/* ABOUT US PAGE*/
+
+#about-us{
+    padding: 5rem;
+}
+
+#about-us .row {
+    padding: 3rem 3rem 7rem 3rem;
+    margin-bottom: auto;
+}
+
+.about-us-para{
+    padding:3rem;
+    font-size:1.4rem;
+}
+
+.circles{
+    padding:1rem;
+}
+
+.about-us-para .tagline{
+    color:var(--subText-yellow);
+    font-family: 'Rouge Script';
+    font-size: 6rem;
+    padding-bottom:0.5rem;
+}
+
+/*ABOUT US PAGE END*/
 /*-----------------------------------------------------------------------------------*/
 
 /** MEDIA QUERIES **/
@@ -497,12 +567,18 @@ background-color: var(--bgMain-dark);
         padding: 0rem;
     }
 
-    .review {
-        font-size: 1.5rem;
-        padding: 10rem 2rem 0;
+    #review-carousel{
+        height: 90vh;
+        display: flex;
+        align-items: center;
     }
 
+    .review {
+        font-size: 1.5rem;
+        padding: 0 2rem 0;
+    }
 
+    /*-----------------------------------------------------------------------------------*/
     /** SELL PAGE **/
 
     .sell-intro {
@@ -514,9 +590,35 @@ background-color: var(--bgMain-dark);
         margin: 1rem 2% 1rem;
     }
 
+    /**** SELL PAGE END ***/
+    /*-----------------------------------------------------------------------------------*/
 
-    /** SELL PAGE END **/
+    /* ABOUT PAGE */
+    #about-us{
+        padding: 0;
+    }
 
+    #about-us .row {
+        padding: 3rem;
+        margin: 0;
+    }
+
+    .about-us-para{
+        padding:2rem;
+        font-size:1.4rem;
+    }
+
+    .circles{
+        padding: 5px;
+    }
+
+    .about-us-para .tagline{
+        color:var(--subText-yellow);
+        font-family: 'Rouge Script';
+        font-size: 3rem;
+        padding-bottom:0.5rem;
+    }
+    /* ABOUT PAGE END */
 }
 
 
@@ -524,6 +626,12 @@ background-color: var(--bgMain-dark);
 
     /* INDEX PAGE */
     /* INTRO SECTION */
+
+    .intro-para {
+        padding: 0;
+        padding-left: 1.5rem;
+    }
+
     #intro-section .row {
         margin: 0;
         padding: 3rem 3rem 7rem;
@@ -550,32 +658,4 @@ background-color: var(--bgMain-dark);
     /** SELL PAGE END **/
 }
 
-  /* ABOUT US*/
 
-#about-us{
-padding: 5rem;
-}
-
-#about-us .row {
-    padding: 3rem 3rem 7rem 3rem;
-    margin-bottom: auto;
-}
-
-.about-us-para{
-padding:3rem;
-font-size:1.4rem;
-}
-
-.circles{
-padding:5rem;
-
-}
-
-.about-us-para .tagline{
-    color:var(--subText-yellow);
-    font-family: 'Rouge Script';
-    font-size: 6rem;
-    padding-bottom:0.5rem;
-}
-
-/*ABOUT US END*/
